--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Marck+Script&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 html {
   scroll-behavior: smooth; }
 
@@ -20,13 +20,14 @@ body {
 nav {
   border-bottom: 1px solid white;
   z-index: 2;
-  background-color: rgba(255, 255, 255, 0.281); }
+  background-color: rgba(255, 255, 255, 0.281);
+  font-weight: 800; }
   nav .navbar-brand {
     z-index: 2; }
   nav .nav-item {
     padding: 15px; }
     nav .nav-item .nav-link {
-      color: white;
+      color: white !important;
       font-size: 12pt; }
       nav .nav-item .nav-link:hover {
         color: white; }
@@ -222,5 +223,98 @@ header {
       margin: 20px 0;
       font-size: 17pt;
       cursor: default; }
+
+.bg_content_2 {
+  min-height: 400px;
+  background-image: url("../img/bg2.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+  .bg_content_2 .elements h3 {
+    text-align: start;
+    color: white;
+    font-size: 44pt; }
+  .bg_content_2 .elements ::placeholder {
+    color: #00000081;
+    font-size: 18pt; }
+  .bg_content_2 .elements input {
+    margin: 45px 0;
+    padding: 0 20px;
+    width: 600px;
+    height: 50px;
+    background-color: rgba(255, 255, 255, 0.37);
+    color: #00000081;
+    font-size: 18pt;
+    border: 2px solid #f2f2f2; }
+    .bg_content_2 .elements input:focus {
+      outline: none; }
+
+footer {
+  overflow: hidden; }
+  footer .ellips {
+    position: absolute;
+    top: 300px;
+    left: 330px;
+    width: 387px;
+    height: 153px;
+    border: 2px solid white;
+    border-radius: 70%;
+    transform: rotate(-50deg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; }
+
+.footer {
+  min-height: 400px; }
+  .footer .company_name {
+    position: relative;
+    text-align: center;
+    display: flex;
+    justify-content: center; }
+    .footer .company_name h3 {
+      width: 100%;
+      color: white;
+      font-family: 'Marck Script', cursive;
+      font-size: 30pt;
+      padding-bottom: 15px;
+      border-bottom: 2px solid white; }
+  .footer .text {
+    color: white;
+    text-align: center; }
+    .footer .text h4 {
+      font-size: 17pt;
+      padding-bottom: 8px; }
+    .footer .text span {
+      margin: 5px 0;
+      font-size: 13pt; }
+  .footer .elements h3 {
+    width: 300px;
+    text-align: start;
+    color: white;
+    font-size: 20pt; }
+  .footer .elements ::placeholder {
+    color: white;
+    font-size: 15pt; }
+  .footer .elements input {
+    margin: 45px 0;
+    padding: 0 20px;
+    width: 300px;
+    height: 40px;
+    color: white;
+    font-size: 15pt;
+    border: none;
+    background-color: transparent;
+    border-bottom: 2px solid white;
+    outline: none; }
+    .footer .elements input:focus {
+      outline: none; }
+  .footer .elements .btn {
+    width: 300px;
+    background-color: #ddb7ab;
+    color: white;
+    font-size: 15pt;
+    border-radius: 0; }
+    .footer .elements .btn:hover {
+      background-color: #d1a699; }
 
 /*# sourceMappingURL=main.css.map */
