--- a/css/main.scss
+++ b/css/main.scss
@@ -1,30 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Marck+Script&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
-
-$default_background_color: white;
-$base_background_color: rgba(0, 0, 0, 0.5);
-$additional_c: #f3e3d3;
-$main_color: #efd9d1;
-$bg_color: #ddb7ab;
-//fonts
-$main_font: 'Montserrat', sans-serif;
-
-@mixin bg {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-@mixin ellips($color, $left) {
-  position: absolute;
-  top: 180px;
-  left: $left;
-  width: 667px;
-  height: 253px;
-  border: 2px solid $color;
-  border-radius: 70%;
-  transform: rotate(-49.5deg);
-  @include bg;
-}
+@import 'mixins';
+@import 'variables';
 
 //scroll costume
 html {
@@ -246,14 +222,17 @@ header {
 //'About Us block'
 .about_block {
   min-height: 100vh;
-  position: relative;
   background-color: #f3e3d3;
 
   .main_content {
     border-bottom: 2px solid $default_background_color;
+    background-color: green;
   }
 
   .text_block {
+    max-width: 800px;
+    padding: 50px;
+
     h4 {
       border-bottom: 2px solid $default_background_color;
       padding-bottom: 15px;
@@ -379,6 +358,7 @@ footer {
   .text {
     color: $default_background_color;
     text-align: center;
+    cursor: default;
     h4 {
       font-size: 17pt;
       padding-bottom: 8px;
