--- a/hero_css/hero_css.css
+++ b/hero_css/hero_css.css
@@ -35,7 +35,8 @@ nav {
 header .front_page {
   min-height: 100vh;
   padding: 20px; }
-header .photo {
+header .photo,
+header video {
   margin: 10px;
   width: 350px;
   height: 350px;
