--- a/hero_css/hero_css.css
+++ b/hero_css/hero_css.css
@@ -111,4 +111,113 @@ header ul {
       width: 40px;
       height: 40px; }
 
+main .popular_goods {
+  background-color: transparent;
+  min-height: 400px;
+  position: relative; }
+  main .popular_goods h3 {
+    margin: 25px 0 5px 0;
+    text-align: center;
+    font-size: 20pt;
+    color: rgba(0, 0, 0, 0.5); }
+  main .popular_goods .carousel {
+    min-height: 400px;
+    position: relative;
+    background: transparent;
+    margin-top: 60px; }
+    main .popular_goods .carousel .indicator {
+      width: 13px;
+      height: 13px;
+      margin: 10px 30px;
+      border-radius: 50%; }
+main .card {
+  width: 200px;
+  border-radius: 0;
+  background-color: transparent;
+  text-decoration: none;
+  border: none; }
+  main .card .pic {
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; }
+  main .card .card-body h5,
+  main .card .card-body .price {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 15pt;
+    padding-top: 20px; }
+
+footer {
+  overflow: hidden; }
+  footer .ellips {
+    position: absolute;
+    top: 300px;
+    left: 330px;
+    width: 387px;
+    height: 153px;
+    border: 2px solid white;
+    border-radius: 70%;
+    transform: rotate(-50deg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; }
+
+.footer {
+  min-height: 400px; }
+  .footer .company_name {
+    position: relative;
+    text-align: center;
+    display: flex;
+    justify-content: center; }
+    .footer .company_name h3 {
+      width: 100%;
+      color: white;
+      font-family: 'Marck Script', cursive;
+      font-size: 30pt;
+      padding-bottom: 15px;
+      border-bottom: 2px solid white; }
+  .footer .text {
+    color: white;
+    text-align: center;
+    cursor: default; }
+    .footer .text h4 {
+      font-size: 17pt;
+      padding-bottom: 8px; }
+    .footer .text span {
+      margin: 5px 0;
+      font-size: 13pt; }
+  .footer .elements h3 {
+    width: 300px;
+    text-align: start;
+    color: white;
+    font-size: 20pt; }
+  .footer .elements ::placeholder {
+    color: white;
+    font-size: 15pt; }
+  .footer .elements input {
+    margin: 45px 0;
+    padding: 0 20px;
+    width: 300px;
+    height: 40px;
+    color: white;
+    font-size: 15pt;
+    border: none;
+    background-color: transparent;
+    border-bottom: 2px solid white;
+    outline: none; }
+    .footer .elements input:focus {
+      outline: none; }
+  .footer .elements .btn {
+    width: 300px;
+    font-size: 15pt;
+    border-radius: 0;
+    border: 2px solid white;
+    color: white;
+    background-color: rgba(255, 255, 255, 0.281);
+    font-weight: 700; }
+    .footer .elements .btn:hover {
+      background-color: #d1a699; }
+
 /*# sourceMappingURL=hero_css.css.map */
