--- a/hero_css/hero_css.scss
+++ b/hero_css/hero_css.scss
@@ -151,3 +151,147 @@ header {
     }
   }
 }
+
+main {
+  .popular_goods {
+    background-color: transparent;
+    min-height: 400px;
+    position: relative;
+    h3 {
+      margin: 25px 0 5px 0;
+      text-align: center;
+      font-size: 20pt;
+      color: $base_background_color;
+    }
+    .carousel {
+      min-height: 400px;
+      position: relative;
+      background: transparent;
+      margin-top: 60px;
+
+      .indicator {
+        width: 13px;
+        height: 13px;
+        margin: 10px 30px;
+        border-radius: 50%;
+      }
+    }
+  }
+  //cards styles
+  .card {
+    width: 200px;
+    border-radius: 0;
+    background-color: transparent;
+    text-decoration: none;
+    border: none;
+
+    .pic {
+      width: 200px;
+      height: 200px;
+      overflow: hidden;
+      @include bg;
+    }
+
+    .card-body {
+      h5,
+      .price {
+        color: $base_background_color;
+        font-size: 15pt;
+        padding-top: 20px;
+      }
+    }
+  }
+}
+
+// Footer
+
+footer {
+  overflow: hidden;
+  .ellips {
+    position: absolute;
+    top: 300px;
+    left: 330px;
+    width: 387px;
+    height: 153px;
+    border: 2px solid $default_background_color;
+    border-radius: 70%;
+    transform: rotate(-50deg);
+    @include bg;
+  }
+}
+
+.footer {
+  min-height: 400px;
+
+  .company_name {
+    position: relative;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    h3 {
+      width: 100%;
+      color: $default_background_color;
+      font-family: 'Marck Script', cursive;
+      font-size: 30pt;
+      padding-bottom: 15px;
+      border-bottom: 2px solid $default_background_color;
+    }
+  }
+
+  .text {
+    color: $default_background_color;
+    text-align: center;
+    cursor: default;
+    h4 {
+      font-size: 17pt;
+      padding-bottom: 8px;
+    }
+    span {
+      margin: 5px 0;
+      font-size: 13pt;
+    }
+  }
+
+  .elements {
+    h3 {
+      width: 300px;
+      text-align: start;
+      color: $default_background_color;
+      font-size: 20pt;
+    }
+
+    ::placeholder {
+      color: $default_background_color;
+      font-size: 15pt;
+    }
+    input {
+      margin: 45px 0;
+      padding: 0 20px;
+      width: 300px;
+      height: 40px;
+      color: $default_background_color;
+      font-size: 15pt;
+      border: none;
+      background-color: transparent;
+      border-bottom: 2px solid $default_background_color;
+      outline: none;
+
+      &:focus {
+        outline: none;
+      }
+    }
+
+    .btn {
+      width: 300px;
+      font-size: 15pt;
+      border-radius: 0;
+      border: 2px solid $default_background_color;
+      color: $default_background_color;
+      background-color: rgba(255, 255, 255, 0.281);
+      font-weight: 700;
+      &:hover {
+        background-color: #d1a699;
+      }
+    }
+  }
+}
