--- a/hero_css/hero_css.scss
+++ b/hero_css/hero_css.scss
@@ -295,3 +295,56 @@ footer {
     }
   }
 }
+
+//Ofcanvas cart
+.cart {
+  background-color: rgba(255, 255, 255, 0.699);
+  .title {
+    height: 80px;
+    background-color: #ffffff50;
+  }
+  h5 {
+    margin: 0 auto;
+    color: $base_background_color;
+    font-size: 18pt;
+  }
+
+  .prod {
+    // border-bottom: 1px solid $base_background_color;
+    background-color: #ffffff50;
+  }
+
+  .photo {
+    .card {
+      border-radius: 0;
+      background-color: transparent;
+      text-decoration: none;
+      border: none;
+
+      .pic {
+        width: 80px;
+        height: 80px;
+        overflow: hidden;
+        @include bg;
+      }
+
+      h5,
+      .price {
+        color: $base_background_color;
+        font-size: 15pt;
+        margin-left: 15px;
+      }
+    }
+  }
+
+  .number {
+    .groups {
+      width: 100%;
+      border-bottom: 1px solid $base_background_color;
+    }
+    .btn {
+      width: 30px;
+      font-size: 10pt;
+    }
+  }
+}
