--- a/css/main.scss
+++ b/css/main.scss
@@ -226,7 +226,6 @@ header {
 
   .main_content {
     border-bottom: 2px solid $default_background_color;
-    background-color: green;
   }
 
   .text_block {
@@ -460,6 +459,99 @@ footer {
     .btn {
       width: 30px;
       font-size: 10pt;
+    }
+  }
+}
+
+//Modal
+.modal {
+  background-color: rgba(0, 0, 0, 0.322);
+  &_sign_in {
+    width: 100%;
+    max-width: 700px;
+    justify-content: center;
+
+    & .modal-content {
+      background-color: #ddb7abb7;
+      position: relative;
+      border-radius: 0;
+      border: none;
+      width: 500px;
+      height: 400px;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+
+      .btn-close {
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        z-index: 2;
+      }
+    }
+
+    h4 {
+      font-weight: bold;
+      font-size: 25pt;
+      line-height: 44px;
+      color: $default_background_color;
+    }
+    p {
+      color: $default_background_color;
+      font-size: 13pt;
+      font-weight: 400;
+    }
+  }
+
+  .margin_form {
+    display: flex;
+    justify-content: end;
+    margin-bottom: 20px;
+
+    &.alt {
+      margin-top: 35px;
+    }
+  }
+
+  input {
+    max-height: 45px;
+    color: $default_background_color;
+  }
+
+  label {
+    padding-top: 10px;
+    color: $default_background_color;
+  }
+
+  form {
+    margin-top: 30px;
+    margin-bottom: 40px;
+  }
+
+  .form-control {
+    background-color: transparent;
+    border-radius: 0;
+    border: none;
+    border-bottom: 1px solid $default_background_color;
+    margin-bottom: 20px;
+
+    &:focus {
+      outline: none;
+      box-shadow: none;
+      color: $default_background_color;
+    }
+  }
+
+  .btmod {
+    background-color: rgba(255, 255, 255, 0.541);
+    color: $default_background_color;
+    border: 2px solid $default_background_color;
+    height: 55px;
+    border-radius: 0;
+    padding: 5px 40px;
+    box-shadow: none;
+
+    &:hover {
+      background: $default_background_color;
+      color: $bg_color;
     }
   }
 }
