--- a/all_goods/all_goods.scss
+++ b/all_goods/all_goods.scss
@@ -50,6 +50,60 @@ nav {
   }
 }
 
+//underline effect
+.fill {
+  li {
+    a {
+      position: relative;
+      transition: all 2s;
+      border-radius: 5px;
+
+      &::after {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 0%;
+        content: '.';
+        color: transparent;
+        background: $default_background_color;
+        height: 1.5px;
+        border-radius: 5px;
+      }
+
+      &:hover {
+        border-radius: 5px;
+        z-index: 1;
+      }
+
+      &:hover::after {
+        z-index: -10;
+        animation: fill 0.8s forwards;
+        opacity: 1;
+        border-radius: 5px;
+      }
+    }
+  }
+}
+
+@keyframes fill {
+  0% {
+    width: 0%;
+    height: 1.5px;
+  }
+
+  50% {
+    width: 100%;
+    height: 1.5px;
+  }
+
+  100% {
+    width: 100%;
+    height: 1.5px;
+  }
+}
+
 .main_block {
   .topic {
     align-items: center;
