--- a/css/main.scss
+++ b/css/main.scss
@@ -47,6 +47,60 @@ nav {
   }
 }
 
+//underline effect
+.fill {
+  li {
+    a {
+      position: relative;
+      transition: all 2s;
+      border-radius: 5px;
+
+      &::after {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 0%;
+        content: '.';
+        color: transparent;
+        background: $default_background_color;
+        height: 1.5px;
+        border-radius: 5px;
+      }
+
+      &:hover {
+        border-radius: 5px;
+        z-index: 1;
+      }
+
+      &:hover::after {
+        z-index: -10;
+        animation: fill 0.8s forwards;
+        opacity: 1;
+        border-radius: 5px;
+      }
+    }
+  }
+}
+
+@keyframes fill {
+  0% {
+    width: 0%;
+    height: 1.5px;
+  }
+
+  50% {
+    width: 100%;
+    height: 1.5px;
+  }
+
+  100% {
+    width: 100%;
+    height: 1.5px;
+  }
+}
+
 header {
   height: 100vh;
   overflow: hidden;
@@ -68,7 +122,7 @@ header {
 
     h3 {
       position: absolute;
-      font-size: 55pt;
+      font-size: calc(50px + 50 * ((100vw - 320px) / 1920));
       font-weight: 400;
       bottom: 350px;
       left: 100px;
@@ -81,8 +135,7 @@ header {
       width: 600px;
       position: absolute;
       text-align: end;
-
-      font-size: 40pt;
+      font-size: calc(30px + 40 * ((100vw - 320px) / 1920));
       font-weight: 500;
       bottom: 350px;
       right: 50px;
@@ -92,7 +145,7 @@ header {
     p {
       width: 500px;
       position: absolute;
-      font-size: 20pt;
+      font-size: calc(20px + 10 * ((100vw - 320px) / 1920));
       font-weight: 600;
       bottom: 100px;
       right: 50px;
@@ -124,7 +177,7 @@ header {
 
   .best_seller {
     color: $default_background_color;
-    font-size: 40pt;
+    font-size: calc(40px + 30 * ((100vw - 320px) / 1920));
   }
 
   .alt {
@@ -156,8 +209,8 @@ header {
   border-bottom: 2px solid $default_background_color;
 
   .pic {
-    width: 287px;
-    height: 377px;
+    width: 277px;
+    height: 367px;
     overflow: hidden;
     @include bg;
   }
@@ -165,7 +218,7 @@ header {
   .card-body {
     h5 {
       color: $default_background_color;
-      font-size: 15pt;
+      font-size: 14pt;
       padding-top: 20px;
     }
 
@@ -177,27 +230,8 @@ header {
 }
 
 //bg block
-.costume_btn {
-  width: 400px;
-  height: 60px;
-  border-radius: 0;
-  border: 2px solid $default_background_color;
-  color: $default_background_color;
-  background-color: rgba(255, 255, 255, 0.281);
-  font-weight: 700;
-  font-size: 20pt;
-  transition: all 0.5s;
-
-  &:hover {
-    color: $default_background_color;
-    border: none;
-    background-color: $bg_color;
-    transition: all 0.5s;
-  }
-}
-
 .bg_content {
-  min-height: 400px;
+  min-height: 50vh;
   background-image: url('../img/bg.jpg');
   background-attachment: fixed;
 
@@ -207,15 +241,33 @@ header {
     h3 {
       text-align: start;
       color: $default_background_color;
-      font-size: 45px;
+      font-size: calc(30px + 15 * ((100vw - 320px) / 1920));
     }
     p {
       margin: 40px 0 40px 300px;
       text-align: start;
       width: 700px;
       color: $default_background_color;
-      font-size: 25px;
+      font-size: calc(20px + 10 * ((100vw - 320px) / 1920));
     }
+  }
+}
+.costume_btn {
+  width: calc(390px + 100 * ((100vw - 320px) / 1920));
+  height: calc(50px + 20 * ((100vw - 320px) / 1920));
+  border-radius: 0;
+  border: 2px solid $default_background_color;
+  color: $default_background_color;
+  background-color: rgba(255, 255, 255, 0.281);
+  font-weight: 700;
+  font-size: calc(25px + 10 * ((100vw - 320px) / 1920));
+  transition: all 0.5s;
+
+  &:hover {
+    color: $default_background_color;
+    border: none;
+    background-color: $bg_color;
+    transition: all 0.5s;
   }
 }
 
@@ -236,18 +288,19 @@ header {
       border-bottom: 2px solid $default_background_color;
       padding-bottom: 15px;
       color: $default_background_color;
-      font-size: 33pt;
+      font-size: calc(40px + 10 * ((100vw - 320px) / 1920));
     }
     p {
       color: $default_background_color;
       font-weight: 500;
       margin-top: 20px;
-      font-size: 14pt;
+      font-size: calc(15px + 5 * ((100vw - 320px) / 1920));
     }
   }
   .picture {
-    width: 571px;
-    height: 571px;
+    margin-top: max(100px, 30px);
+    width: calc(491px + 85 * ((100vw - 320px) / 1920));
+    height: calc(491px + 85 * ((100vw - 320px) / 1920));
     border-start-start-radius: 40%;
     @include bg;
   }
@@ -264,11 +317,12 @@ header {
     color: $default_background_color;
 
     h3 {
-      font-size: 47pt;
+      font-size: calc(67px + 10 * ((100vw - 320px) / 1920));
       cursor: default;
     }
     a {
-      font-size: 18pt;
+      font-size: 35px;
+      font-weight: 400;
       color: $default_background_color;
       margin: 0;
       padding: 0;
@@ -552,6 +606,22 @@ footer {
     &:hover {
       background: $default_background_color;
       color: $bg_color;
+    }
+  }
+}
+
+//breakpoints
+@media (max-width: 1199.98px) {
+  .about_block {
+    justify-content: center;
+    align-content: center;
+    .pic_block {
+      display: flex;
+      justify-content: center;
+      padding-bottom: 10px;
+      .picture {
+        margin: 10px auto;
+      }
     }
   }
 }
