--- a/hero_css/hero_css.css
+++ b/hero_css/hero_css.css
@@ -32,6 +32,41 @@ nav {
       nav .nav-item .nav-link:hover {
         color: white; }
 
+.fill li a {
+  position: relative;
+  transition: all 2s;
+  border-radius: 5px; }
+  .fill li a::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 0%;
+    content: '.';
+    color: transparent;
+    background: white;
+    height: 1.5px;
+    border-radius: 5px; }
+  .fill li a:hover {
+    border-radius: 5px;
+    z-index: 1; }
+  .fill li a:hover::after {
+    z-index: -10;
+    animation: fill 0.8s forwards;
+    opacity: 1;
+    border-radius: 5px; }
+
+@keyframes fill {
+  0% {
+    width: 0%;
+    height: 1.5px; }
+  50% {
+    width: 100%;
+    height: 1.5px; }
+  100% {
+    width: 100%;
+    height: 1.5px; } }
 header .front_page {
   min-height: 100vh;
   padding: 20px; }
