--- a/hero_css/hero_css.css
+++ b/hero_css/hero_css.css
@@ -24,6 +24,9 @@ nav {
   font-weight: 700; }
   nav .navbar-brand {
     z-index: 2; }
+    nav .navbar-brand img {
+      width: calc(55px + 15 * ((100vw - 320px) / 1920));
+      height: calc(55px + 15 * ((100vw - 320px) / 1920)); }
   nav .nav-item {
     padding: 15px; }
     nav .nav-item .nav-link {
@@ -77,6 +80,9 @@ header .photo {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover; }
+  header .photo video {
+    width: 350px;
+    height: 350px; }
 header hr {
   height: 5px;
   background-color: #ddb7ab; }
@@ -85,6 +91,7 @@ header .txt {
   justify-content: center;
   align-content: center;
   margin: 0 auto;
+  width: 90%;
   cursor: default; }
   header .txt h2 {
     font-size: 24pt;
@@ -126,6 +133,7 @@ header .txt {
 header .add_btn {
   margin: 50px auto;
   height: 60px;
+  width: 70%;
   background-color: #ddb7ab;
   color: white;
   font-size: 17pt;
@@ -366,6 +374,17 @@ footer {
     width: 0;
     height: 0;
     opacity: 0;
+    display: none; } }
+@media (max-width: 575.98px) {
+  header .propositions span {
+    font-size: 15px; }
+  header .photo video {
+    width: 290px;
+    height: 290px; }
+  header .add_btn {
+    margin: 30px 0; }
+
+  .indicator {
     display: none; } }
 
 /*# sourceMappingURL=hero_css.css.map */
